fix: 調整 letter-spacing 數值

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -74,7 +74,7 @@ $font-sizes-3xl: $font-sizes-base * 2;
 
 // letter-spacing 
 $letter-spacing-wide: 1px;
-$letter-spacing-normal: normal;
+$letter-spacing-normal: 0px;
 
 // line-height
 $line-heights-normal: 140%;
